[package]
name = "gowe-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
gowe = { git = "https://github.com/gowe-team/gowe-rust.git" }
itoa = "1.0"
ryu = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
simd-json = "0.17"
