[package]
name = "gowe-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gowe-bridge = { path = "../gowe-bridge" }
napi = { version = "2.16", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.16"
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"
